test/compilable/imports/fwdref12201a.d
module imports.fwdref12201a;
alias int FILE;
