test/fail_compilation/imports/imp15896.d
module imports.imp15896;

private int thebar=4;
